compiler/src/compile/snapshots/compiler__compile__desugar__test__desugar_snapshot_tests@spawn_block_with_loop.tapir.snap
---
source: compiler/src/compile/desugar.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/desugar/spawn_block_with_loop.tapir
---
Script(
  imports: [],
  struct_declarations: [],
  property_declarations: [
    PropertyDeclaration(
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "counter",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Int),
          name: "int",
          span: "[span]",
        )),
      ),
      span: "[span]",
    ),
  ],
  globals: [],
  functions: [
    Function(
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Expression(
            expression: Expression(
              span: "[span]",
              kind: Spawn(
                name: "@spawn_block_0",
                arguments: [],
              ),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: "[meta]",
    ),
    Function(
      kind: Regular,
      name: "@spawn_block_0",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Loop(
            block: [
              Statement(
                span: "[span]",
                kind: Assignment(
                  targets: [
                    Expression(
                      span: "[span]",
                      kind: Variable("counter"),
                      meta: "[meta]",
                    ),
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: BinaryOperation(
                        lhs: Expression(
                          span: "[span]",
                          kind: Variable("counter"),
                          meta: "[meta]",
                        ),
                        operator: Add,
                        rhs: Expression(
                          span: "[span]",
                          kind: Integer(1),
                          meta: "[meta]",
                        ),
                      ),
                      meta: "[meta]",
                    ),
                  ],
                ),
                meta: "[meta]",
              ),
              Statement(
                span: "[span]",
                kind: Wait(
                  frames: None,
                ),
                meta: "[meta]",
              ),
            ],
          ),
          meta: "[meta]",
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: "[meta]",
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
